# gnuckle-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  benchmark.py  package.json  pyproject.toml  turboquant_benchmark_dashboard.html
benchmark-index/: index.json
benchmarks/: _example_template.json  persistent_tool_stress.json  persistent_tool_stress_implicit_benefit_of_doubt_40.json  persistent_tool_stress_implicit_longdump_32_v3.json  persistent_tool_stress_long.json
docs/: 00-index.md  01-agentic-loop-benchmark.md  02 - agentic-benchmark-spec.md  03-runtime-roadmap.md  04 - minimal-agentic-harness-ground-truth.md  05-v1-build-plan.md  06-v1-success-metrics.md  07-focused-session-01-first-agentic-episode.md  08-implementation-workflow-rules.md  09-focused-session-01-status.md  10-openclaude-failure-handling-grounding.md  11-v2-agentic-benchmark-plan.md  12-v2-benchmark-metrics.md  13-integrity-decay-and-cul.md  14-v2-visualizer-and-postrun-flow.md  15-benchmark-system-intent.md  16-openclaude-reference-map.md  17-personal-productivity-benchmark-workflows.md  18-benchmark-workflow-spec.md  19-benchmark-workflow-implementation-plan.md  20-handoff-phase1-complete.md  21-handoff-phase2-audit-and-remaining-metrics.md  22-benchmark-intent-and-target-guide.md  23-benchmark-json-format-v2.md  24-standard-quality-benchmarks-bridge.md  25-benchmark-pack-registry-architecture.md  26-agentic-benchmark-preservation.md  memory.md
gnuckle/: __init__.py  __main__.py  agentic_runtime.py  agentic_types.py  ape.py  bench_manifest_schema.json  benchmark.py  benchmark_scoring.py  benchmark_workflows.py  cli.py  fixture_validator.py  llama_presets.json  menu.py  playground.py  profile.py  session_runner.py  session_store.py  splash.py  system_prompt.py  tool_executor.py  update.py  visualize.py  workflow_loader.py  workflows.json
gnuckle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bump_version.py  generate_phase2_fixtures.py
tests/: test_agentic_runtime.py  test_bench_pack.py  test_benchmark_scoring.py  test_menu.py  test_playground.py  test_session_runner.py  test_tool_executor.py  test_visualize.py  test_workflow_loader.py
tmp_bench_continue/: benchmark_f16_20260409_001801.json
(+121 files in other folders)
