[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuckle"
version = "0.3.13"
description = "Agentic AI benchmark for llama.cpp KV cache quantization. Accidentally GNU, intentionally simian."
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gnuckle AI" },
]
keywords = ["benchmark", "llama.cpp", "turboquant", "kv-cache", "agentic", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
completion = ["argcomplete>=3.5.0"]

[project.scripts]
gnuckle = "gnuckle.cli:main"

[project.urls]
Homepage = "https://github.com/bricklc/gnuckle-ai"
Issues = "https://github.com/bricklc/gnuckle-ai/issues"

[tool.setuptools.packages.find]
include = ["gnuckle*"]

[tool.setuptools.package-data]
gnuckle = ["*.json", "fixtures/*/*", "prompts/*.txt"]
